force-app/main/default/objects/Account/fields/First_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Membership_Start_Date__c</fullName>
    <inlineHelpText>The Start Date of the oldest Membership associated with this Account</inlineHelpText>
    <label>First Membership Start Date</label>
    <type>Date</type>
</CustomField>