force-app/main/default/objects/Account/fields/Last_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Membership_Start_Date__c</fullName>
    <inlineHelpText>The Start Date of the most recent Membership associated to this Account</inlineHelpText>
    <label>Last Membership Start Date</label>
    <type>Date</type>
</CustomField>