force-app/main/default/objects/Account/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <inlineHelpText>This Account's current Membership Type, set based on the Type of the related Membership with the greatest End Date</inlineHelpText>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Type</valueSetName>
    </valueSet>
</CustomField>