force-app/main/default/objects/Account/fields/Primary_Membership__c.field-meta.xml
<CustomField>
    <fullName>Primary_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows primary membership.</description>
    <label>Primary Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>